--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,9 +5,9 @@ name: build
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "profiling_1" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "profiling_1" ]
 
 jobs:
 
